--- a/_includes/github_block.html
+++ b/_includes/github_block.html
@@ -1,5 +1,9 @@
 <div class="info_block">
-  <div class="info_block__title"><a class="post__github_url" href="https://github.com">GitHub</a></div>
+  <div class="info_block__title">
+    <a class="post__github_url"
+       href="https://github.com"
+       target="_blank">GitHub</a>
+  </div>
 
   <div class="info_block__summery">
     <div class="row">
@@ -19,20 +23,24 @@
     <dt class="marks_block__item_title">Owner</dt>
     <dd class="marks_block__item_value">
       <img class="post__github_ownerIMG" src="" />
-      <a class="post__github_ownerURL post__github_ownerLogin" href=""></a>
+      <a class="post__github_ownerURL post__github_ownerLogin"
+         href=""
+         target="_blank"></a>
     </dd>
     <dt class="marks_block__item_title">Issues</dt>
     <dd class="marks_block__item_value post__github_issues">-</dd>
-    <dt class="marks_block__item_title">Commits</dt>
-    <dd class="marks_block__item_value post__github_commits">-</dd>
     <dt class="marks_block__item_title">Last commit</dt>
     <dd class="marks_block__item_value">
       <span class="post__github_lastCommitDate"></span>
       <img class="post__github_lastCommitAuthorIMG" src="" />
-      <a class="post__github_ownerURL post__github_lastCommitAuthorURL post__github_lastCommitAuthorLogin" href=""></a>
+      <a class="post__github_ownerURL post__github_lastCommitAuthorURL post__github_lastCommitAuthorLogin"
+         href=""
+         target="_blank"></a>
     </dd>
+    <!-- <dt class="marks_block__item_title">Commits</dt>
+    <dd class="marks_block__item_value post__github_commits">-</dd>
     <dt class="marks_block__item_title">Contributors</dt>
-    <dd class="marks_block__item_value post__github_contributors">-</dd>
+    <dd class="marks_block__item_value post__github_contributors">-</dd> -->
   </dl>
 
 </div>
