--- a/_includes/links_block.html
+++ b/_includes/links_block.html
@@ -5,7 +5,7 @@
   <div class="links_block__item">
     <a class="post__sourceCodeURL" target="_blank">Source Code</a>
   </div>
-  <div class="links_block__item" target="_blank">
-    <a class="post__demoURL">Demo</a>
+  <div class="links_block__item">
+    <a class="post__demoURL" target="_blank">Demo</a>
   </div>
 </div>
