--- a/_includes/pages/search.html
+++ b/_includes/pages/search.html
@@ -1,6 +1,9 @@
 <div class="post_search block block--top">
   <div class="container">
-    <input id="post_search__input" type="text" placeholder="Search extension..." class="form-control post_search__input" />
+    <input id="post_search__input"
+           type="text"
+           placeholder="Search extension..."
+           class="form-control post_search__input" />
   </div>
   <script type="text/javascript">
     document.getElementById('post_search__input').value =
