--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -10,11 +10,47 @@
 
 }
 
-.last-menu-item {
-  margin-right: -15px;
+.main_menu {
+  position: absolute;
+  top: 0;
+  right: 3px;
 }
 
-.main_menu__sync_button {
-  margin-top: 5px;
-  margin-left: 10px;
+.main_menu__item {
+  padding: 12px;
+  color: white;
+  display: block;
+  &:hover {
+    color: white;
+  }
+}
+
+.navbar-brand {
+  .logo_text {
+    transform: rotate(0);
+    transition: transform 0.2s;
+  }
+  &:hover .logo_text {
+    transform: rotate(-7deg);
+    transition: transform 0.2s;
+  }
+}
+// 
+// .slogan {
+//   position: absolute;
+//   left: 90px;
+//   top: 50px;
+//   font-size: 12px;
+// }
+
+.logo_text {
+  float: left;
+}
+
+.logo_img {
+  float: left;
+  display: inline !important;
+  margin-top: -3px;
+  width: 65px;
+  margin-right: 7px;
 }
