--- a/_sass/components/_post.scss
+++ b/_sass/components/_post.scss
@@ -1,3 +1,9 @@
+.post__github_short_info {
+  position: absolute;
+  top: 15px;
+  right: 20px;
+}
+
 .post__description {
   margin-top: $block-vpadding * 2;
   font-size: $font-size-large * 1.3;
