feat: spinner on posts loading & no extensions found

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
           <img class="logo_img" src="/images/logo.png" />
           <div class="logo_text">Spreex</div>
         </a>
-        <!-- <div class="slogan">Catalogue of Spree Commerce extensions</div> -->
+        <div id="slogan" class="slogan">Spree Commerce extensions catalogue</div>
       </div>
 
       <div class="main_menu">
