--- a/_includes/pages/post.html
+++ b/_includes/pages/post.html
@@ -57,7 +57,7 @@
         </div>
 
         <div id="post__loading_comments" class="post__loading_comments">
-          <i class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
+          <i class="fa fa-refresh fa-spin fa-3x fa-fw"></i>
         </div>
 
         <div id="post__comments">
