--- a/_includes/pages/search.html
+++ b/_includes/pages/search.html
@@ -21,5 +21,9 @@
   </script>
 </div>
 <div class="container">
-  <div id="post_list" class="post_list"></div>
+  <div id="post_list" class="post_list">
+    <div class="post_list__loading">
+      <i class="fa fa-refresh fa-spin fa-3x fa-fw"></i>
+    </div>
+  </div>
 </div>
