fix: github last commiter url

--- a/_includes/github_block.html
+++ b/_includes/github_block.html
@@ -33,7 +33,7 @@
     <dd class="marks_block__item_value">
       <span class="post__github_lastCommitDate"></span>
       <img class="post__github_lastCommitAuthorIMG" src="" />
-      <a class="post__github_ownerURL post__github_lastCommitAuthorURL post__github_lastCommitAuthorLogin"
+      <a class="post__github_lastCommitAuthorURL post__github_lastCommitAuthorLogin"
          href=""
          target="_blank"></a>
     </dd>
