feat: github block on phone screen

--- a/_sass/_bootstrap.scss
+++ b/_sass/_bootstrap.scss
@@ -16,3 +16,13 @@
     pointer-events: none;
   }
 }
+
+.dl-horizontal dt {
+    float: left;
+    width: 160px;
+    clear: left;
+    text-align: right;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
