--- a/_sass/components/_post_search.scss
+++ b/_sass/components/_post_search.scss
@@ -9,5 +9,5 @@ $post-search-input-height: 50px;
   border-radius: $border-radius;
   border: 0;
   border-bottom: $border-thickness solid $border-color;
-  text-transform: lowercase;
+  // text-transform: lowercase;
 }
