--- a/_includes/github_block.html
+++ b/_includes/github_block.html
@@ -2,18 +2,18 @@
   <div class="info_block__title">
     <a class="post__github_url"
        href="https://github.com"
-       target="_blank">GitHub</a>
+       target="_blank">On GitHub</a>
   </div>
 
   <div class="info_block__summery">
-    <div class="row">
-      <div class="col-xs-4">
+    <div class="info_block__summery_values clearfix">
+      <div class="info_block__summery_value_wrap">
         <i class="fa fa-eye" aria-hidden="true"></i><span class="info_block__summery_value post__github_watchers">-</span>
       </div>
-      <div class="col-xs-4">
+      <div class="info_block__summery_value_wrap">
         <i class="fa fa-star" aria-hidden="true"></i><span class="info_block__summery_value post__github_stars">-</span>
       </div>
-      <div class="col-xs-4">
+      <div class="info_block__summery_value_wrap">
         <i class="fa fa-code-fork" aria-hidden="true"></i><span class="info_block__summery_value post__github_forks">-</span>
       </div>
     </div>
@@ -31,11 +31,13 @@
     <dd class="marks_block__item_value post__github_issues">-</dd>
     <dt class="marks_block__item_title">Last commit</dt>
     <dd class="marks_block__item_value">
-      <span class="post__github_lastCommitDate"></span>
-      <img class="post__github_lastCommitAuthorIMG" src="" />
-      <a class="post__github_lastCommitAuthorURL post__github_lastCommitAuthorLogin"
-         href=""
-         target="_blank"></a>
+      <span class="post__github_lastCommitDate"></span> by
+      <span class="post__github_lastCommitAuthor">
+        <img class="post__github_lastCommitAuthorIMG" src="" />
+        <a class="post__github_lastCommitAuthorURL post__github_lastCommitAuthorLogin"
+           href=""
+           target="_blank"></a>
+      </span>
     </dd>
     <!-- <dt class="marks_block__item_title">Commits</dt>
     <dd class="marks_block__item_value post__github_commits">-</dd>
