--- a/_includes/pages/post.html
+++ b/_includes/pages/post.html
@@ -8,11 +8,23 @@
     </div>
   </header>
   <div class="container">
-    <div class="row">
-      <div class="col-md-9">
-        <div class="post__description post__github_description">{{ page.description }}</div>
 
-        {% include links_block.html %}
+    <div class="hidden-md hidden-lg">
+      <div class="post__description post__github_description">{{ page.description }}</div>
+      {% include links_block.html %}
+    </div>
+
+    <div class="row">
+      <div class="col-md-4 col-lg-3 col-md-push-8 col-lg-push-9">
+        {% include github_block.html %}
+      </div>
+
+      <div class="col-md-8 col-lg-9 col-md-pull-4 col-lg-pull-3">
+
+        <div class="visible-md visible-lg">
+          <div class="post__description post__github_description">{{ page.description }}</div>
+          {% include links_block.html %}
+        </div>
 
         <div id="post__content" class="post__content">
           <div id="post__content_346238_4_6283">{{ include.content }}</div><!-- post__content_346238_4_6283 -->
@@ -30,7 +42,7 @@
                         placeholder="Write a comment..."></textarea>
             </div>
             <div class="form-group text-right">
-              <button type="button" class="btn btn-success new_comment__button">Post comment</button>
+              <button type="button" class="btn btn-lg btn-success new_comment__button">Post comment</button>
             </div>
           </form>
           <script type="text/javascript">
@@ -65,9 +77,6 @@
 
       </div>
 
-      <div class="col-md-3">
-        {% include github_block.html %}
-      </div>
     </div>
   </div>
 </article>
