--- a/_sass/components/_info_block.scss
+++ b/_sass/components/_info_block.scss
@@ -48,3 +48,24 @@
 .post__github_lastCommitAuthor {
   white-space: nowrap;
 }
+
+.info_block__summery_value_wrap {
+  a {
+    &:hover {
+      text-decoration: none !important;
+    }
+    text-decoration: none !important;
+    & > i {
+      transform: scale(1);
+      transition: 0.2s;
+    }
+    &:hover > i {
+      transform: scale(1.2);
+      transition: 0.2s;
+    }
+  }
+}
+
+.post__github_lastCommitDate {
+  border-bottom: 1px dashed black;
+}
