--- a/_sass/components/_post.scss
+++ b/_sass/components/_post.scss
@@ -77,6 +77,11 @@
   }
 }
 
+.post__content_loading {
+  text-align: center;
+  margin-top: 100px;
+}
+
 .post__content_footer {
   text-align: center;
   cursor: pointer;
