--- a/_sass/_bootstrap.scss
+++ b/_sass/_bootstrap.scss
@@ -18,11 +18,16 @@
 }
 
 .dl-horizontal dt {
-    float: left;
-    width: 160px;
-    clear: left;
-    text-align: right;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+  float: left;
+  width: 160px;
+  clear: left;
+  text-align: right;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+input:focus, textarea:focus {
+  box-shadow: none !important;
+  border-color: black !important;
 }
