--- a/_includes/links_block.html
+++ b/_includes/links_block.html
@@ -1,11 +1,13 @@
 <div class="links_block clearfix">
   <div class="links_block__item">
-    <a class="post__websiteURL" target="_blank">Website</a>
+    <a class="post__websiteURL" target="_blank">
+      <i class="fa fa-home" aria-hidden="true"></i> Website
+    </a>
   </div>
   <div class="links_block__item">
-    <a class="post__sourceCodeURL" target="_blank">Source Code</a>
+    <a class="post__sourceCodeURL" target="_blank"><i class="fa fa-code" aria-hidden="true"></i> Source Code</a>
   </div>
   <div class="links_block__item">
-    <a class="post__demoURL" target="_blank">Demo</a>
+    <a class="post__demoURL" target="_blank"><i class="fa fa-play-circle-o" aria-hidden="true"></i> Demo</a>
   </div>
 </div>
