--- a/_includes/rubygems_block.html
+++ b/_includes/rubygems_block.html
@@ -1,9 +1,31 @@
-<div class="info_block">
-  <div class="info_block__title">RubyGems</div>
+<div class="info_block post__rubygems">
+  <div class="info_block__title">
+    <a href="https://rubygems.com"
+       target="_blank"
+       class="post__rubygems_url">On RubyGems</a>
+  </div>
+
+  <div class="info_block__summery">
+    <div class="info_block__summery_values clearfix">
+      <div class="info_block__summery_value_wrap">
+        <a href="" class="post__rubygems_docsURL" target="_blank">
+          <i class="fa fa-book" aria-hidden="true"></i><span class="info_block__summery_value">RDoc</span>
+        </a>
+      </div>
+      <div class="info_block__summery_value_wrap">
+        <a href="" class="post__rubygems_wikiURL" target="_blank">
+          <i class="fa fa-pencil-square-o" aria-hidden="true"></i><span class="info_block__summery_value">Wiki</span>
+        </a>
+      </div>
+    </div>
+  </div>
+
   <dl class="dl-horizontal marks_block">
-    <dt class="marks_block__item_title">Last verion</dt>
+    <dt class="marks_block__item_title">Version</dt>
     <dd class="marks_block__item_value post__rubygems_lastVersion">-</dd>
-    <dt class="marks_block__item_title">Tot. downl.</dt>
+    <dt class="marks_block__item_title">Downloads</dt>
     <dd class="marks_block__item_value post__rubygems_totalDownloads">-</dd>
+    <dt class="marks_block__item_title">Dependencies</dt>
+    <dd class="marks_block__item_value post__rubygems_runtimeDeps">-</dd>
   </dl>
 </div>
