--- a/_includes/pages/post.html
+++ b/_includes/pages/post.html
@@ -17,6 +17,7 @@
     <div class="row">
       <div class="col-md-4 col-lg-3 col-md-push-8 col-lg-push-9">
         {% include github_block.html %}
+        {% include rubygems_block.html %}
       </div>
 
       <div class="col-md-8 col-lg-9 col-md-pull-4 col-lg-pull-3">
