feat: content extender hover

--- a/_sass/components/_post.scss
+++ b/_sass/components/_post.scss
@@ -89,13 +89,17 @@
   position: absolute;
   bottom: 0;
   width: 100%;
+  transition: color 0.3s;
   color: rgba(0, 0, 0, 0.7);
     /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+100&1+0,0+100 */
   background: -moz-linear-gradient(bottom,  rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%); /* FF3.6-15 */
   background: -webkit-linear-gradient(bottom,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* Chrome10-25,Safari5.1-6 */
   background: linear-gradient(to top,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
-
+  &:hover {
+    transition: color 0.3s;
+    color: rgba(0, 0, 0, 1);
+  }
 }
 
 .post__content--extended {
