--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
 
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="myModalLabel">Sign in by<a style="position: absolute; margin-top: -2px; margin-left: 5px;" href="http://my-data.space" target="_blank"><img style="width: 40px" src="http://my-data.space/images/logo_small.png" /></a></h4>
+          <h4 class="modal-title" id="myModalLabel">Sign in by <a style="text-decoration: underline" href="http://my-data.space" target="_blank">my-data.space</a></h4>
         </div>
         <div class="modal-body">
           <div class="signin_modal__auth_block">
