--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,6 +24,9 @@
             <button type="button" name="button" data-authprovider="google" class="btn btn-lg btn-danger signin_modal__auth_button signin_modal__auth_button--google">
               Connect with Google
             </button>
+            <button type="button" name="button" data-authprovider="github" class="btn btn-lg btn-danger signin_modal__auth_button signin_modal__auth_button--github">
+              Connect with GitHub
+            </button>
           </div>
         </div>
       </div>
